--- a/base_external/configs/aesd_qemu_defconfig
+++ b/base_external/configs/aesd_qemu_defconfig
@@ -2,6 +2,8 @@ BR2_aarch64=y
 BR2_KERNEL_HEADERS_6_1=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/qemu/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="aesd_qemu_defconfig"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.1.44"
